# TEDI.screenshot

./: .gitignore  CHANGELOG.md  README.md  build.mjs  extension.js  manifest.json  package-lock.json  package.json
.github/workflows/: release.yml
sidecar-src/: Cargo.toml
sidecar-src/src/: main.rs
src/: capture.js  clipboard.js  helper.js  index.js  runtime.js  sidecar.js  ui.js
